app/02-mongoDB-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    appname: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      appname: mongodb
  template:
    metadata:
      labels:
        appname: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017
        volumeMounts:
          - mountPath: "/data/db"
            name: mongo-pvc 
      volumes:
        - name: mongo-pvc
          persistentVolumeClaim:
            claimName: mongo-pvc
