app/05-mongo-exp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-exp-deployment
  labels:
    appname: mongodb
    type: exp
spec:
  replicas: 1
  selector:
    matchLabels:
      appname: mongodb
      type: exp
  template:
    metadata:
      labels:
        appname: mongodb
        type: exp
    spec:
      containers:
      - name: mongo-exp
        image: mongo-express
        ports:
        - containerPort: 8081
