app/03-mongoDB-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  labels:
    appname: mongodb
spec:
  selector:
    appname: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
