app/06-mongo-exp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-exp-service
  labels:
    appname: mongodb 
    type: exp
spec:
  selector:
    appname: mongodb
    type: exp
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
