app/07-mongo-exp-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: mongo-exp
  namespace: mongo-app
  labels:
    appname: mongodb
spec:
  to:
    kind: Service
    name: mongo-exp-service
    weight: 100
  port:
    targetPort: 8081
  tls:
    termination: edge
  wildcardPolicy: None
